force-app/main/default/objects/SSP_Application__c/fields/LocalDCBSOffice__c.field-meta.xml
<CustomField>
    <fullName>LocalDCBSOffice__c</fullName>
    <description>This Field is used to store local dcbs office</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Local DCBS Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>