force-app/main/default/objects/SSP_Application__c/fields/NotEnrolledInHealthCareCoverageToggle__c.field-meta.xml
<CustomField>
    <fullName>NotEnrolledInHealthCareCoverageToggle__c</fullName>
    <description>This field is used to determine if an individual has access to but not yet enrolled in healthcare coverage.</description>
    <label>Not enrolled in HealthCare Coverage</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>