force-app/main/default/objects/SSP_Application__c/fields/ProgramsApplied__c.field-meta.xml
<CustomField>
    <fullName>ProgramsApplied__c</fullName>
    <description>Used to store the list of programs applied for a household</description>
    <label>Programs Applied</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>BenefitPrograms</valueSetName>
        
        </valueSet>
</CustomField>