force-app/main/default/objects/SSP_Application__c/fields/ProgramsAppliedCopy__c.field-meta.xml
<CustomField>
    <fullName>ProgramsAppliedCopy__c</fullName>
    <description>To store original programs when readonly user opens the application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ProgramsAppliedCopy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>