force-app/main/default/objects/SSP_Application__c/fields/ProgramsAppliedRenewal__c.field-meta.xml
<CustomField>
    <fullName>ProgramsAppliedRenewal__c</fullName>
    <description>This field will hold temporary programs applied values for renewal flow so that actual programs applied field will only have MA as program and rest of the programs will be in this field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Programs Applied Renewal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>