force-app/main/default/objects/SSP_Application__c/fields/RAC_Selected_Options__c.field-meta.xml
<CustomField>
    <fullName>RAC_Selected_Options__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RAC Selected Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>