force-app/main/default/objects/SSP_Application__c/fields/RAC_Selections__c.field-meta.xml
<CustomField>
    <fullName>RAC_Selections__c</fullName>
    <description>This is used to store the json of screens selected on RAC selection screen,</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>RAC Selections</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>