force-app/main/default/objects/SSP_Application__c/fields/Relationship_To_You__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_You__c</fullName>
    <description>This is used in collateral Contact screen to capture the information of a Collateral contact relationship use in verifying household composition</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship To You</label>
    <length>255</length>
    <type>Text</type>
</CustomField>