force-app/main/default/objects/SSP_Application__c/fields/RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalDate__c</fullName>
    <description>renewal date for case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>