force-app/main/default/objects/SSP_Application__c/fields/SectionStatus__c.field-meta.xml
<CustomField>
    <fullName>SectionStatus__c</fullName>
    <description>This field is used to store status of section to identify whether they are started or completed</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Section Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>