force-app/main/default/objects/SSP_Application__c/fields/ShortSnapEmail__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapEmail__c</fullName>
    <description>ShortSnap Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>