force-app/main/default/objects/SSP_Application__c/fields/ShortSnapFirstName__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapFirstName__c</fullName>
    <description>ShortSnap First Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>