force-app/main/default/objects/SSP_Application__c/fields/ShortSnapIsFixedAddress__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapIsFixedAddress__c</fullName>
    <description>ShortSnap Is Fixed Address</description>
    <label>Is Fixed Address</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>