force-app/main/default/objects/SSP_Application__c/fields/ShortSnapIsIntentionToResideInKentucky__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapIsIntentionToResideInKentucky__c</fullName>
    <description>ShortSnap Is Intention To Reside In Kentucky</description>
    <label>Is Intention To Reside in Kentucky</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>