force-app/main/default/objects/SSP_Application__c/fields/ShortSnapIsMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapIsMailingAddress__c</fullName>
    <description>ShortSnap Is Mailing Address</description>
    <label>Is Mailing Address</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>