force-app/main/default/objects/SSP_Application__c/fields/ShortSnapIsPrimaryTextPreferred__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapIsPrimaryTextPreferred__c</fullName>
    <description>ShortSnap Is Primary Text Preferred</description>
    <label>Is Primary Text Preferred</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>