force-app/main/default/objects/SSP_Application__c/fields/ShortSnapLastName__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapLastName__c</fullName>
    <description>ShortSnap Last Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>