force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMailingAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMailingAddressLine1__c</fullName>
    <description>ShortSnap Mailing Address Line1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Address Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>