force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMailingAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMailingAddressLine2__c</fullName>
    <description>ShortSnap Mailing Address Line2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Address Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>