force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMailingCity__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMailingCity__c</fullName>
    <description>ShortSnap Mailing City</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>