force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMailingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMailingCountryCode__c</fullName>
    <description>Mailing Country Code for Short SNAP Application</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCountry</valueSetName>
        
        </valueSet>
</CustomField>