force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMailingCountyCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMailingCountyCode__c</fullName>
    <description>ShortSnap Mailing County Code</description>
    <label>Mailing County Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCounty</valueSetName>
        
        </valueSet>
</CustomField>