force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMailingGeolocation__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMailingGeolocation__c</fullName>
    <description>This field stores Mailing Geolocation for Short SNAP applications.</description>
    <label>Mailing Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>