force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMailingStateCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMailingStateCode__c</fullName>
    <label>Mailing State Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>