force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMailingZipCode4__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMailingZipCode4__c</fullName>
    <description>ShortSnap Mailing Zip Code 4</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Zip Code 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>