force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMailingZipCode5__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMailingZipCode5__c</fullName>
    <description>ShortSnap Mailing Zip Code 5</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Zip Code 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>