force-app/main/default/objects/SSP_Application__c/fields/ShortSnapMiddleInitial__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapMiddleInitial__c</fullName>
    <description>ShortSnap Middle Initial</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>