force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPhysicalAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPhysicalAddressLine1__c</fullName>
    <description>ShortSnap Physical AddressLine1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical Address Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>