force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPhysicalAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPhysicalAddressLine2__c</fullName>
    <description>ShortSnap Physical Address Line2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical Address Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>