force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPhysicalCity__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPhysicalCity__c</fullName>
    <description>ShortSnap Physical City</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>