force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPhysicalCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPhysicalCountryCode__c</fullName>
    <description>This field is used to store country for a Physical address for Short SNAP application</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCountry</valueSetName>
        
        </valueSet>
</CustomField>