force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPhysicalCountyCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPhysicalCountyCode__c</fullName>
    <description>ShortSnap Physical County Code</description>
    <label>Physical County Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCounty</valueSetName>
        
        </valueSet>
</CustomField>