force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPhysicalGeolocation__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPhysicalGeolocation__c</fullName>
    <description>This field is used to track Physical Geolocation for Short SNAP applications.</description>
    <label>Physical Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>