force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPhysicalStateCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPhysicalStateCode__c</fullName>
    <label>Physical State Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>