force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPhysicalZipCode4__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPhysicalZipCode4__c</fullName>
    <description>ShortSnap Physical Zip Code 4</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical Zip Code 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>