force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPhysicalZipCode5__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPhysicalZipCode5__c</fullName>
    <description>ShortSnap Physical Zip Code 5</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical Zip Code 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>