force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPreferredNotificationMethodCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPreferredNotificationMethodCode__c</fullName>
    <description>ShortSnap Preferred Notification MethodCode</description>
    <label>Preferred Notification MethodCode</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PreferredNotification</valueSetName>
        
        </valueSet>
</CustomField>