force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPreferredSpokenLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPreferredSpokenLanguageCode__c</fullName>
    <description>ShortSnap Preferred Spoken LanguageCode</description>
    <label>Preferred Spoken Language Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SpokenLanguage</valueSetName>
        
        </valueSet>
</CustomField>