force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPreferredWrittenLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPreferredWrittenLanguageCode__c</fullName>
    <description>ShortSnap Preferred Written Language Code</description>
    <label>Preferred Written Language Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPWrittenLanguage</valueSetName>
        
        </valueSet>
</CustomField>