force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPrimaryPhoneExetnsion__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPrimaryPhoneExetnsion__c</fullName>
    <description>ShortSnap Primary Phone Exetnsion</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Phone Exetnsion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>