force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPrimaryPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPrimaryPhoneNumber__c</fullName>
    <description>ShortSnap Primary Phone Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Phone Number</label>
    <type>Phone</type>
</CustomField>