force-app/main/default/objects/SSP_Application__c/fields/ShortSnapPrimaryPhoneTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapPrimaryPhoneTypeCode__c</fullName>
    <description>ShortSnap Primary Phone Type Code</description>
    <label>Primary Phone Type Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PhoneTypeCode</valueSetName>
        
        </valueSet>
</CustomField>