force-app/main/default/objects/SSP_Application__c/fields/ShortSnapReportedSsn__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapReportedSsn__c</fullName>
    <description>ShortSnap Reported Ssn</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reported Ssn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>