force-app/main/default/objects/SSP_Application__c/fields/ShortSnapSuffixCode__c.field-meta.xml
<CustomField>
    <fullName>ShortSnapSuffixCode__c</fullName>
    <description>ShortSnap Suffix Code</description>
    <label>Suffix Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Suffix</valueSetName>
        
        </valueSet>
</CustomField>