force-app/main/default/objects/SSP_Application__c/fields/SignatureDate__c.field-meta.xml
<CustomField>
    <fullName>SignatureDate__c</fullName>
    <description>Application submit signature date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Application submit signature date</inlineHelpText>
    <label>SignatureDate</label>
    <type>Date</type>
</CustomField>