force-app/main/default/objects/SSP_Application__c/fields/SSPDCMessage__c.field-meta.xml
<CustomField>
    <fullName>SSPDCMessage__c</fullName>
    <description>Used to store SSP DC message</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>SSP DC Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>