force-app/main/default/objects/SSP_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Different types of status of an Application</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>N</fullName>
                
                
                    <label>New</label>
                
                </value>
            
                <value>
                
                    <fullName>P</fullName>
                
                
                    <label>Pending</label>
                
                </value>
            
                <value>
                
                    <fullName>AP</fullName>
                
                
                    <label>Approved</label>
                
                </value>
            
                <value>
                
                    <fullName>UN</fullName>
                
                
                    <label>Unsubmitted</label>
                
                </value>
            
                <value>
                
                    <fullName>Inactive</fullName>
                
                
                    <label>Inactive</label>
                
                </value>
            
                <value>
                
                    <fullName>Blocked</fullName>
                
                
                    <label>Blocked</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>