force-app/main/default/objects/SSP_Application__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>TransactionId to track records in the Transaction table to ensure callouts are completed before init calls.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>