force-app/main/default/objects/SSP_Application__c/recordTypes/SSP_Application.recordType-meta.xml
<RecordType>
    <fullName>SSP_Application</fullName>
    <active>true</active>
    <label>Application</label>
</RecordType>